# elgate

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
.semaphore/: semaphore.yml
docs/: CHANGELOG.md
docs/rfcs/: RFC-0001-architecture.md
elgate-core/: Cargo.toml
elgate-core/examples/: check_io_uring.rs  cpu_info.rs  cross_platform_benchmark.rs  disk_io.rs  end_to_end.rs  error_handling.rs  latency_profile.rs  network_io.rs  numa_optimization.rs  numa_ring_buffer.rs  perf_benchmark.rs  ring_buffer.rs  simple_disk_engine.rs  thread_builder.rs
elgate-core/examples/common/: mod.rs
elgate-core/src/: lib.rs
elgate-core/src/arch/: cpu_info.rs  mod.rs  runtime_mode.rs  thread_builder.rs
elgate-core/src/disk/: fallback.rs  io_uring.rs  mod.rs
elgate-core/src/net/: fallback.rs  io_uring.rs  mod.rs
elgate-core/src/ring/: buffer.rs  header.rs  mod.rs  slot.rs
