[package]
name = "elgate-core"
version = "0.1.0"
edition = "2021"
authors = ["Prasanth Vemula <vpk11@iitbbs.ac.in>"]
license = "MIT"

[features]
# Enable Linux-specific io_uring features
io_uring = ["tokio-uring"]

[dependencies]
tokio = { workspace = true }
# Only included when the io_uring feature is enabled
tokio-uring = { workspace = true, optional = true }
num_cpus = { workspace = true }
sysinfo = { workspace = true }
core_affinity = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# New dependencies for shared memory ring buffer
memmap2 = "0.5"         # For memory mapping
libc = "0.2"            # For low-level system calls
nix = "0.26"            # For futex operations
crossbeam-utils = "0.8" # For atomic operations
dashmap = "5.4"         # For concurrent maps
uuid = { version = "1.3", features = ["v4", "serde"] }

[[example]]
name = "cpu_info"
path = "examples/cpu_info.rs"

[[example]]
name = "ring_buffer"
path = "examples/ring_buffer.rs"
