[package]
name = "elgate-core"
version = "0.1.0"
edition = "2021"
authors = ["Prasanth Vemula <vpk11@iitbbs.ac.in>"]
license = "MIT"

[features]
default = ["io_uring"]
io_uring = ["tokio-uring", "dep:libc"]
numa = []

[dependencies]
tokio = { workspace = true, features = ["full"] }
# Only included when the io_uring feature is enabled
tokio-uring = { workspace = true, optional = true }
num_cpus = { workspace = true }
sysinfo = { workspace = true }
core_affinity = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# New dependencies for shared memory ring buffer
memmap2 = "0.5"         # For memory mapping
libc = { version = "0.2", optional = true }  # For low-level system calls
nix = "0.26"            # For futex operations
crossbeam-utils = "0.8" # For atomic operations
dashmap = "5.4"         # For concurrent maps
uuid = { version = "1.3", features = ["v4", "serde"] }

# For disk I/O
futures = "0.3"

# For network I/O
socket2 = "0.5"

# For examples and benchmarks
rand = "0.8"

[[example]]
name = "cpu_info"
path = "examples/cpu_info.rs"

[[example]]
name = "ring_buffer"
path = "examples/ring_buffer.rs"

[[example]]
name = "perf_benchmark"
path = "examples/perf_benchmark.rs"
required-features = ["io_uring"]

[[example]]
name = "disk_io"
path = "examples/disk_io.rs"
required-features = ["io_uring"]

[[example]]
name = "network_io"
path = "examples/network_io.rs"
required-features = ["io_uring"]

[[example]]
name = "thread_builder"
path = "examples/thread_builder.rs"

[[example]]
name = "numa_ring_buffer"
path = "examples/numa_ring_buffer.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"
required-features = ["io_uring"]

[[example]]
name = "cross_platform_benchmark"
path = "examples/cross_platform_benchmark.rs"
required-features = ["io_uring"]

[[example]]
name = "end_to_end"
path = "examples/end_to_end.rs"
required-features = ["io_uring"]

[[example]]
name = "numa_optimization"
path = "examples/numa_optimization.rs"
required-features = ["numa"]

[[example]]
name = "latency_profile"
path = "examples/latency_profile.rs"
required-features = ["io_uring"]
